# smartodds

./: .pre-commit-config.yaml  README.md  data_mls_simset_predictions.csv  merged_data.csv  mls_team_conference.csv  pyproject.toml  question_2.ipynb  question_3.ipynb  question_4.ipynb  question_5.ipynb  question_6.ipynb
smartodds/data_fetching/: config.py  fetch_data.py  prepare_data.py  team_mappings.py
smartodds/evaluation/: evaluation.py
smartodds/model/: base_model.py  extended_model.py  simple_model.py  utils.py
