[tool.poetry]
name = "smartodds"
version = "0.1.0"
description = ""
authors = ["Mark Clare <mark.clare@kindredgroup.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
pydantic = "^2.7.4"
pandas = "^2.2.2"
numpy = "^2.0.0"
jupyterlab = "^4.2.3"
notebook = "^7.2.1"
ruff = "^0.4.10"
mypy = "^1.10.1"
scipy = "^1.14.0"
tabulate = "^0.9.0"
seaborn = "^0.13.2"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
#extend-include = ["*.pyi", "*.ipynb"] # lint and format .pyi and .ipynb files

[tool.ruff.lint]
select = [
#     pydocstyle, probably not needed
#    "D",
    # pycodestyle error
    "E",
    # pycodestyle warning
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    #mccable
    "C90",
    #pylint,
#    "PL"
]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 18

[tool.ruff.lint.pydocstyle]
convention = "google"